# TurboJpegReader

./: CMakeLists.txt  app_jpeg_api.c  app_jpegturbo_api.c
cmake_stuff/: findDependencies.cmake  options.cmake  printInfo.cmake
